fix code formatting, notably enable wrapping on lower screen sizes and newlines not working

--- a/css/main.css
+++ b/css/main.css
@@ -272,4 +272,9 @@ input[type="checkbox"]:checked::before {
 
 .pre-display {
   display: inline-block;
+  white-space: pre-wrap;       /* Since CSS 2.1 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
